argoCD/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qiita-ogp-compressor
spec:
  selector:
    app: qiita-ogp-compressor
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
