argoCD/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
      sectionName: https-wildcard
  hostnames:
    - "qiita.uniproject.jp"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qiita-ogp-compressor
          port: 80
      sessionPersistence:
        sessionName: cookie
        type: Cookie
