argoCD/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qiita-ogp-compressor-ingress
  annotations:
    cert-manager.io/cluster-issuer: le-cf-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: qiita.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qiita-ogp-compressor
                port:
                  number: 80
  tls:
    - hosts:
        - qiita.uniproject.jp
      secretName: qiita-ogp-compressor-tls
